--- a/index.html
+++ b/index.html
@@ -23,22 +23,199 @@
       <a class="partner-logo">
         <img src="img/partner_logo.png" alt="logo of NetApp">
       </a>
-      <div class="download__form form">
-        <div class="form-header">Download Veeam Availability Suite v8</div>
-        <input type="text" placeholder="First Name">
-        <input type="text" placeholder="Last Name">
-        <input type="text" placeholder="Enter business mail">
-        <input type="text" placeholder="Enter phone number">
-        <input type="text" placeholder="choose-you-hypervisor">
-        <select name="choose-you-hypervisor" id="choose-you-hypervisor">
-          <option selected="selected">Choose you hypervisor...</option>
-          <option value="Item1">Item1</option>
-          <option value="Item2">Item2</option>
-          <option value="Item3">Item3</option>
-        </select>
-        <input type="submit" value="download">
+      <form action="" class="download__form form">
+        <fieldset>
+          <legend class="form-header">Download Veeam Availability Suite v8</legend>
+          <input type="text" placeholder="First Name">
+          <input type="text" placeholder="Last Name">
+          <input type="text" placeholder="Enter business mail">
+          <input type="text" placeholder="Enter phone number">
+          <input type="text" placeholder="choose-you-hypervisor">
+          <select name="choose-you-hypervisor" id="choose-you-hypervisor">
+            <option selected="selected">Choose you hypervisor...</option>
+            <option value="Item1">Item1</option>
+            <option value="Item2">Item2</option>
+            <option value="Item3">Item3</option>
+          </select>
+          <input type="submit" value="download">
+        </fieldset>
+      </form>
+    </section>
+    <section class="soft-describe">
+      <a href="" class="soft-describe__video video-box">Link to video</a>
+      <p class="content-text content-text--big"><span class="soft-describe__text-bold">Veeam</span><sup class="soft-describe__text-sup">®</sup> and <span class="soft-describe__text-bold">NetApp</span> offer the right solution to deliver Availability 	for the Modern Data Center<sup class="soft-describe__text-sup">™</sup>. Veeam’s integration with NetApp helps orchestrate Data ONTAP to create application-consistent backups from NetApp storage snapshots, providing NetApp FAS and FlexArray (V-Series) customers with the ability to create image-based backups as often as needed - even during business hours - with little to no impact on production environments.</p>
+      <a href="" class="soft-describe__link link">Product Overview</a>
+      <a href="" class="soft-describe__link link">Top 10 Reasons to Choose Veeam</a>
+    </section>
+    <nav class="main-nav">
+      <ul class="main-nav__list">
+        <li class="main-nav__list-item main-nav__list-item--active">
+          <a href="" class="main-nav__link">Integration</a>
+        </li>
+        <li class="main-nav__list-item">
+          <a href="" class="main-nav__link">Backup</a>
+        </li>
+        <li class="main-nav__list-item">
+          <a href="" class="main-nav__link">Recovery</a>
+        </li>
+        <li class="main-nav__list-item">
+          <a href="" class="main-nav__link main-nav__link--download">Download</a>
+        </li>
+      </ul>
+    </nav>
+    <section class="benefits-of-product">
+      <h2 class="content-header">Explore the benefits of Veeam integration with NetApp</h2>
+      <p class="content-text">Veeam’s <b>enterprise-level, near-continuous data protection (near-CDP)</b> delivers the best recovery time and point objectives (RTPO™) for all applications in VMware vSphere environments. The combination of NetApp’s <b>low RPO</b> capabilities and Veeam’s <b>low RTO</b> enablement allows users to:</p>
+      <ul class="content-list">
+        <li class="content-list__item">
+          Create backups from storage snapshots up to <b>20 times faster</b> than competitive offerings
+        </li>
+        <li class="content-list__item">
+          Recover individual items or entire VMs quickly and efficiently from <b>NetApp Snapshot®, SnapMirror®</b> and <b>SnapVault®</b> with <b>Veeam Explorer™ for Storage Snapshots</b>
+        </li>
+        <li class="content-list__item">
+          Improve DR protection by creating instant, secondary backups from storage snapshots
+        </li>
+      </ul>
+      <figure class="content-image">
+        <img src="" alt="here is a scheme">
+        <figcaption>Components of a Veeam backup with FAS storager</figcaption>
+      </figure>
+      <figure class="content-image">
+        <img src="" alt="here is a scheme">
+        <figcaption>Veeam Explorer for Storage Snapshots</figcaption>
+      </figure>
+      <p class="content-text">In addition to fast backups and quick recovery from NetApp Snapshot, SnapMirror and SnapVault, NetApp FAS and FlexArray (V-Series) customers can meet the most stringent RTPO of Tier-1 applications with:</p>
+      <ul class="content-list">
+        <li class="content-list__item">
+          <b>Fast, application-consistent recovery points</b> by orchestrating NetApp Data ONTAP to create snapshot only backups
+        </li>
+        <li class="content-list__item">
+          <b>Reduce data loss</b> by automating the creation of secondary backups from NetApp SnapVault
+        </li>
+        <li class="content-list__item">
+          <b>Verified protection</b> by automating the testing of backups to guarantee the recoverability of every file, application and virtual machine (VM)
+        </li>
+        <li class="content-list__item">
+          <b>A cloud ready platform</b> that enhances data availability by providing an efficient way to get backups off site to a service provider
+        </li>
+      </ul>
+      <figure class="content-image">
+        <img src="" alt="here is a scheme">
+        <figcaption>Ready for the Cloud</figcaption>
+      </figure>
+      <a class="benefits-of-product__link link" href="">Ready for the Cloud</a>
+    </section>
+    <section class="benefits-of-product">
+      <h2 class="content-header">Perform fast backups from NetApp Storage Snapshots</h2>
+      <div class="benefit-of-product">
+        <h3 class="content-subtitle">Dramatically improve vSphere backup</h3>
+        <p class="content-text">Taking VMware vSphere snapshots can produce a serious burden on virtual machine (VM) performance, and it can take considerable effort by administrators to overcome this technical challenge and meet the required SLAs.</p>
+        <p class="content-text">Veeam dramatically improves this process, providing built-in integration with your production storage, leveraging storage snapshot functionality to reduce the impact on the environment from vSphere snapshot removal during backup and replication.</p>
+        <p class="content-text">Don’t be stuck with once-a-day backups for I/O intensive workloads—make backups and replicas as often as every 15 minutes!</p>
+        <a class="link" href="">Watch video on how Veeam integrates with NetApp</a>
+        <a class="link" href="">Watch video about Veeam solution for HP StoreVirtual VSA</a>
+        <figure class="content-image">
+          <img src="" alt="here is a scheme">
+          <figcaption>A job keeps a VM snapshot for only a brief moment, which results in instant VM snapshot commit</figcaption>
+        </figure>
+      </div>
+      <div class="benefit-of-product">
+        <h3 class="content-header">Fast vSphere backups with low RPOs</h3>
+        <p class="content-text">Storage snapshots can be taken frequently with minimal impact to the production environment, but this can’t be your only backup solution. What if storage itself goes down, or gets corrupted? Even with storage-based replication, you need to take your data out of the single fault domain. This is why many customers prefer to additionally make true backups stored on different storage.</p>
+        <p class="content-text">Veeam combines best of both worlds with vSphere snapshots for application-consistent backups and storage snapshots for fast recovery point objectives (RPOs). Now you can:</p>
+        <ul class="content-list">
+          <li class="content-list__item">Run backups at any time and frequency, dramatically improving achievable RPOs</li>
+          <li class="content-list__item">Speed up the process—back up from storage snapshots up to 20x faster than with competitive solutions</li>
+          <li class="content-list__item">Dramatically reduce the impact of backup activities on your production environment</li>
+        </ul>
+        <a class="link" href="">Watch video about Veeam solution for HP StoreVirtual VSA</a>
+        <figure class="content-image">
+          <img src="" alt="here is a scheme">
+          <figcaption>Read blog post about Veeam and NetApp</figcaption>
+        </figure>
+      </div>
+      <div class="benefit-of-product">
+        <h3 class="content-header">How it works</h3>
+        <p class="content-text">Veeam Backup & Replication works with HP and NetApp storage products to create backups and replicas from storage snapshots in the following way. The backup/replica job:</p>
+        <ol class="content-list">
+          <li class="content-list__item">Analyzes which VMs in the job have disks on supported storage.</li>
+          <li class="content-list__item">Triggers a vSphere snapshot for all VMs located on the same storage volume. (As a part of a vSphere snapshot, Veeam’s application-aware processing of each VM is performed normally.)</li>
+          <li class="content-list__item">Triggers a snapshot of said storage volume once all VM snapshots have been created.</li>
+          <li class="content-list__item">Retrieves the CBT information for VM snapshots created on step 2.</li>
+          <li class="content-list__item">Immediately triggers the removal of the vSphere snapshots on the production VMs.</li>
+          <li class="content-list__item">Mounts the storage snapshot to one of the backup proxies connected into the storage fabric.</li>
+          <li class="content-list__item">Reads new and changed virtual disk data blocks directly from the storage snapshot and transports them to the backup repository or replica VM.</li>
+          <li class="content-list__item">Triggers the removal storage snapshot once all VMs have been backed up.</li>
+        </ol>
+        <p class="content-text">As the result, VMs run off snapshots for the shortest possible time, while jobs obtain data from VM snapshot files preserved in the storage snapshot. As the result, VM snapshots do not get a chance to grow large and can be committed very quickly without overloading production storage with extended merge procedure, as is the case with classic techniques for backing up from VM snapshots.</p>
+        <figure class="content-image">
+          <img src="" alt="here is a scheme">
+          <figcaption>Veeam Explorer for Storage Snapshots</figcaption>
+        </figure>
       </div>
     </section>
+    <section class="benefits-of-product">
+      <h2 class="content-header">Enjoy quick granular recovery for NetApp Storage Snapshots</h2>
+      <div class="benefit-of-product">
+        <h3 class="content-header">Restore from a storage snapshot in minutes!</h3>
+        <p class="content-text">With Veeam Explorer for Storage Snapshots, you can take advantage of the low overhead that periodic SAN snapshots offer for low recovery point objectives (RPOs), and let Veeam Backup & Replication™ automate the whole recovery process for you, bringing you low recovery time objectives (RTOs) as well. You can:</p>
+        <ul class="content-list">
+          <li class="content-list__item">Recover guest OS files (for Windows, Linux, Novell , etc.), application items or an entire VM from a storage snapshot in two minutes or less</li>
+          <li class="content-list__item">Restore directly from storage snapshots, eliminating the need for staging and intermediate restores</li>
+          <li class="content-list__item">Reduce the time needed to mount snapshots 10 times or more compared to manual processes, lowering your RTOs while avoiding human errors that can occur during critical recovery steps such as mounting snapshots</li>
+        </ul>
+        <p class="content-text">With Veeam Explorer for Storage Snapshots, you can take advantage of the low overhead that periodic SAN snapshots offer for low recovery point objectives (RPOs), and let Veeam Backup & Replication™ automate the whole recovery process for you, bringing you low recovery time objectives (RTOs) as well. You can:</p>
+        <a class="link" href="">Watch video on how Veeam integrates with NetApp</a>
+        <a class="link" href="">Read blog post about Veeam and NetApp</a>
+        <figure class="content-image">
+          <img src="" alt="here is a scheme">
+          <figcaption>Veeam Explorer for Storage Snapshots</figcaption>
+        </figure>
+      </div>
+      <div class="benefit-of-product">
+        <h3 class="content-header">How it works</h3>
+        <p class="content-text">Veeam works with HP and NetApp storage products to granular recovery from storage snapshots. Here’s how it works.</p>
+        <figure class="content-image">
+          <img src="" alt="here is a scheme">
+          <figcaption>For image describtion</figcaption>
+        </figure>
+      </div>
+      <div class="benefit-of-product">
+        <h3 class="content-header">Supported storage:</h3>
+        <span class="content-text">For NetApp, all Data ONTAP based storage, including:</span>
+        <ul class="content-list">
+          <li class="content-list__item">NetApp FAS</li>
+          <li class="content-list__item">NetApp Data ONTAP Edge VSA</li>
+          <li class="content-list__item">NetApp FlexArray (V-Series)</li>
+          <li class="content-list__item">IBM N series</li>
+        </ul>
+      </div>
+    </section>
+    <section class="about-us">
+      <h2 class="content-header">About Veeam Software</h2>
+      <p class="content-text content-text--big">Veeam® enables the Always-On Business™ by providing solutions that deliver Availability for the Modern Data Center™, which provides recovery time and point objectives (RTPO™) of less than 15 minutes for all applications and data. Veeam Backup & Replication™ leverages technologies that enable the modern data center, including VMware vSphere, Microsoft Hyper-V, NetApp storage, and HP 3PAR StoreServ and StoreVirtual Storage, to help organizations meet RTPOs, save time, mitigate risks, and dramatically reduce capital and operational costs. Veeam Availability Suite™ provides all of the benefits and features of Veeam Backup & Replication along with advanced monitoring, reporting and capacity planning for the backup infrastructure.</p>
+    </section>
   </main>
+  <footer>
+    <div class="legal-information">
+      <span>Copyright © 2015 Veeam® Software.</span>
+      <span>Privacy policy & Cookies</span>
+    </div>
+    <div class="links-block">
+      <a href="#" class="links-list__item">White papers</a>
+      <a href="#" class="links-list__item">Webinars</a>
+      <a href="#" class="links-list__item">Webinars</a>
+      <a href="#" class="links-list__item">Veeam Live</a>
+      <a href="#" class="links-list__item">Product demo<span class="non-uppercase">s</span></a>
+    </div>
+    <div class="social">
+      <a href="#" class="social__link">Facebook</a>
+      <a href="#" class="social__link">LinkedIn</a>
+      <a href="#" class="social__link">Twitter</a>
+      <a href="#" class="social__link">Youtube</a>
+    </div>
+  </footer>
 </body>
 </html>
+
